# vim.rs

./: .gitignore  Cargo.toml  makefile
src/: command.rs  errors.rs  main.rs  terminal.rs
src/buffer/: buffer.rs  mod.rs  ring_buffer.rs
src/list/: CMakeLists.txt  linked_list.cpp  linked_list.h  linked_list.hpp  linked_list.rs
src/list/.cache/clangd/index/: linked_list.cpp.8EFDEE95F6C9430C.idx  linked_list.h.74AC2B933B4D2599.idx  linked_list.hpp.2239CFB1FCE9B908.idx
